# ClientManagementSystem

./: .gitignore  manage.py  pyproject.toml  requirements.txt
APITest/: create_client_test.py
cms/: apps.py  forms.py  models.py  urls.py  views.py
djangoProject/: settings.py  urls.py
templates/: base.html
templates/cms/: base.html  create_client.html  dashboard.html  home.html
templates/registration/: login.html
